# PAB-sample-app-setup

./: .gitignore  1-INSTALL_EXECUTABLES.md  2-BUILD_APP_BUNDLE.md  3-START_SERVICES.md  4-USE_APP.md  4-USE_PAB_ENDPOINTS.md  README.md  cabal.project  pab-starter.cabal
app/: Main.hs
contract/src/: AppContract.hs
contract/src/Plutus/Contracts/: PayToWallet.hs
src/: Controller.hs  Main.hs
src/Plutus/Contracts/: Game.hs  PayToAddress.hs
