cabal-version:      2.4
name:               pab-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Controller
      Plutus.Contracts.PayToWallet
    build-depends:
        aeson
      , base              >=4.9 && <5
      , containers
      , directory
      , filepath
      , text
      , text-class
      , beam-sqlite
      , sqlite-simple
      , freer-extras
      , plutus-pab
      , beam-migrate
      , cardano-wallet-core
      , iohk-monitoring
      , lobemo-backend-ekg
      , contra-tracer
      , plutus-chain-index
      , cardano-api
      , lens
      , prettyprinter
      , playground-common
      , plutus-ledger
      , plutus-ledger-api
      , plutus-contract
      , freer-simple
      , data-default
      , row-types
      , purescript-bridge
      , openapi3
      , async
      , servant-client
      , http-client
      , servant-client-core
      , cardano-addresses
    hs-source-dirs:
      src

executable pab-pay-to-wallet
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wno-missing-import-lists -Wredundant-constraints -O0
    build-depends:
          pab-starter
        , aeson
        , base              >=4.9 && <5
        , containers
        , data-default
        , freer-extras
        , freer-simple
        , lens
        , playground-common
        , plutus-contract
        , plutus-ledger
        , plutus-pab
        , prettyprinter
        , purescript-bridge
        , row-types
        , servant-purescript
        , text
        , openapi3